--- a/css/Mercaderia.css
+++ b/css/Mercaderia.css
@@ -112,3 +112,23 @@
 {
     font-size: 12px;
 }
+
+.div-popover {
+    position: relative;
+    display: none;
+  }
+  
+.div-popover .popover-content {
+    background-color: #f9f9f9;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    padding: 10px;
+    position: absolute;
+    z-index: 999;
+  }
+
+  .popover-content
+  {
+    font-size: 14px;
+    font-family: 'Times New Roman', Times, serif;
+  }
